SOM-763/[Report] schedule Refund report

--- a/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_SalesAndPaymentsReportMonthSchedule.cls
@@ -10,7 +10,7 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
         DateTime firstDayOfLastMonth = (DateTime)System.Today().toStartOfMonth().addMonths(-1);
         String firstDay = firstDayOfLastMonth.format('MM/dd/YYYY');
         
-        OrgWideEmailAddress owa = [select id, Address, DisplayName from OrgWideEmailAddress where Address = 'maha.meghras@viseo.com' OR Address = 'noreply@rimowa.com' limit 1];
+        OrgWideEmailAddress owa = [select id, Address, DisplayName from OrgWideEmailAddress where Address = 'maha.meghras-ext@rimowa.com' OR Address = 'noreply@rimowa.com' limit 1];
 
         DateTime lastDayOfLastMonth  = firstDayOfLastMonth.addDays(Date.daysInMonth(firstDayOfLastMonth.year(), firstDayOfLastMonth.month()) - 1);
         String lastDay = lastDayOfLastMonth.format('MM/dd/YYYY');
@@ -27,7 +27,7 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
             List<Report> paymentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Payments_report_5w3'];
             List<Report> shipmentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName = 'Shipments_Report_a6T'];
             List<Report> returnOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Return_Orders_Finance_3My'];
-            
+            List<Report> refundOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Order_Summary_with_Refunds_Report_ekT'];
             
             
             String invoiceReportId = (String)invoiceRep.get(0).get('Id');
@@ -35,18 +35,19 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
             String paymentReportId = (String)paymentRep.get(0).get('Id');
             String shipmentReportId = (String)shipmentRep.get(0).get('Id');
             String returnOrdersReportId = (String)returnOrdersRep.get(0).get('Id');
+        	String refundOrdersReportId = (String)refundOrdersRep.get(0).get('Id');
 
 
             String urlFilters = '?&pv0=' + firstDay + '&pv1=' + lastDay + '&csv=1&exp=1&enc=UTF-8&isdtp=p1';
         
             
-            System.debug('urlFilters' + urlFilters);
          
             Messaging.EmailFileAttachment invoiceAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment creditMemoAttachment = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment paymentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment shipmentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment returnOrdersAttachment    = new Messaging.EmailFileAttachment();
+        	Messaging.EmailFileAttachment refundOrdersAttachment    = new Messaging.EmailFileAttachment();
             
 
 
@@ -55,6 +56,7 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
             ApexPages.PageReference paymentReport;
             ApexPages.PageReference shipmentReport;
             ApexPages.PageReference returnOrdersReport;
+        	ApexPages.PageReference refundOrdersReport;
 			
             
             if(!invoiceRep.isEmpty()){
@@ -77,6 +79,11 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
                     returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
     
                 }
+        	if(!refundOrdersRep.isEmpty()){
+                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
+    
+                }
+        
 
             Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
             List<Messaging.EmailFileAttachment> attchs = new List<Messaging.EmailFileAttachment>();
@@ -87,6 +94,7 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
                 paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
                 shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
                 returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
+                refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
             } 
             else{
                 if(!invoiceRep.isEmpty()){
@@ -119,16 +127,23 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
                     returnOrdersAttachment.setContentType('text/csv');
                     attchs.add(returnOrdersAttachment);
                 }
+                if(!refundOrdersRep.isEmpty()){
+                    refundOrdersAttachment.setFileName('Refund Orders Report.csv');
+                    refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
+                    refundOrdersAttachment.setContentType('text/csv');
+                    attchs.add(refundOrdersAttachment);
+                }
             }
 
             email.setFileAttachments(attchs);
             
             String subject ='[SOM] Monthly extraction of payments and sales for ' + reportSetting.Country_List__c;
             email.setSubject(subject);
-            email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments and returns reports for week starting from '+firstDay+' to '+lastDay+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
+            email.setPlainTextBody('Hello,' + '\n\n' +'Find attached Sales, payments, shipments, returns and refunds reports for month starting from '+firstDay+' to '+lastDay+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
             email.setOrgWideEmailAddressId(owa.id);
             String[] toAddresses = new list<string>();
             toAddresses.addAll(reportSetting.Distribution_List__c.split(','));
+        	System.debug('toAddresses' + toAddresses);
             email.setToAddresses( toAddresses );
             emails.add(email);
 
@@ -136,111 +151,5 @@ public with sharing class SOM_SalesAndPaymentsReportMonthSchedule Implements Sch
 
     }   
     
-    
-    /*
-    @future(callout=true)
-    public static void monthExport() {
-
-
-        DateTime firstDayOfLastMonth = (DateTime)System.Today().toStartOfMonth().addMonths(-1);
-        String firstDay = firstDayOfLastMonth.format('MM/dd/YYYY');
-
-        DateTime lastDayOfLastMonth  = firstDayOfLastMonth.addDays(Date.daysInMonth(firstDayOfLastMonth.year(), firstDayOfLastMonth.month()) - 1);
-        String lastDay = lastDayOfLastMonth.format('MM/dd/YYYY');
-
-        List<Messaging.SingleEmailMessage> emails = new List<Messaging.SingleEmailMessage>();
-
-        List<Reports_Setting__mdt> reportSettings = [SELECT Countries__c, Country_List__c, Distribution_List__c FROM Reports_Setting__mdt];
-        for (Reports_Setting__mdt reportSetting : reportSettings) {
-
-            String invoiceDevName    = '%'+reportSetting.Country_List__c+'%Sales%Invoice%';
-            String creditMemoDevName = '%'+reportSetting.Country_List__c+'%Sales%Credit_Memo%';
-            String paymentDevName    = '%'+reportSetting.Country_List__c+'%Sales%Payments%';
-
-            List<Report> invoiceRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName LIKE :invoiceDevName];
-            List<Report> creditMemoRep = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName LIKE :creditMemoDevName];
-            List<Report> paymentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName LIKE :paymentDevName];
-
-            List<String> countryList = reportSetting.Countries__c.split(',');
-
-            String urlFilters = '?';
-            for( Integer i = 0 ; i<countryList.size(); i++){
-                urlFilters += '&pv' + i + '=' + countryList[i];
-            }
-            String iterSize      = String.valueOf(countryList.size());
-            String iterSizePlus1 = String.valueOf(countryList.size()+1);
-
-            urlFilters += '&pv' + iterSize + '=' + firstDay + '&pv' + iterSizePlus1 + '='  + lastDay +'&csv=1&exp=1&enc=UTF-8&isdtp=p1';
-           
-            Messaging.EmailFileAttachment invoiceAttachment    = new Messaging.EmailFileAttachment();
-            Messaging.EmailFileAttachment creditMemoAttachment = new Messaging.EmailFileAttachment();
-            Messaging.EmailFileAttachment paymentAttachment    = new Messaging.EmailFileAttachment();
-            
-            String invoiceReportId;
-            String creditMemoReportId;
-            String paymentReportId;
-
-            ApexPages.PageReference invoiceReport;
-            ApexPages.PageReference creditMemoReport;
-            ApexPages.PageReference paymentReport;
-            
-            if(!invoiceRep.isEmpty()){
-                invoiceReportId      = (String)invoiceRep[0].Id;
-                invoiceReport    = new ApexPages.PageReference('/'+invoiceReportId + urlFilters);
-
-            }
-            if(!creditMemoRep.isEmpty()){
-                creditMemoReportId   = (String)creditMemoRep[0].Id;
-                creditMemoReport = new ApexPages.PageReference('/'+creditMemoReportId + urlFilters);
-
-            }
-            if(!paymentRep.isEmpty()){
-                paymentReportId      = (String)paymentRep[0].Id;
-                paymentReport    = new ApexPages.PageReference('/'+paymentReportId + urlFilters);
-
-            }
-
-            Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
-            List<Messaging.EmailFileAttachment> attchs = new List<Messaging.EmailFileAttachment>();
-
-            if(Test.isRunningTest()) { 
-                invoiceAttachment.setBody(Blob.valueOf('UnitInvoice.Test'));
-                creditMemoAttachment.setBody(Blob.valueOf('UnitCM.Test'));
-                paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
-            } 
-            else{
-                if(!invoiceRep.isEmpty()){
-                    invoiceAttachment.setFileName('Sales Invoice Report.csv');
-                    invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
-                    invoiceAttachment.setContentType('text/csv');
-                    attchs.add(invoiceAttachment);
-                }
-                if(!creditMemoRep.isEmpty()){
-                    creditMemoAttachment.setFileName('Sales Credit Memo Report.csv');
-                    creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
-                    creditMemoAttachment.setContentType('text/csv');
-                    attchs.add(creditMemoAttachment);
-                }
-                if(!paymentRep.isEmpty()){
-                    paymentAttachment.setFileName('Payment Report.csv');
-                    paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
-                    paymentAttachment.setContentType('text/csv');
-                    attchs.add(paymentAttachment);
-                }
-            }
-
-            email.setFileAttachments(attchs);
-            String subject ='[SOM] Monthly extraction of payments and sales for ' + reportSetting.Country_List__c;
-            email.setSubject(subject);
-            email.setPlainTextBody('Hello,' + '\n' +'Find attached Sales and Payments reports for month starting from '+firstDay+' to '+lastDay+' for the country/countries: ' + reportSetting.Countries__c + +'\n\n' + 'Best regards.');
-           
-            String[] toAddresses = new list<string>();
-            toAddresses.addAll(reportSetting.Distribution_List__c.split(','));
-            email.setToAddresses( toAddresses );
-            emails.add(email);
-        }
-
-        Messaging.sendEmail(emails);
-
-    }  */  
+   
 }
